force-app/main/default/objects/Special_Price_Request_Product__c/Special_Price_Request_Product__c.object-meta.xml
<CustomObject>
    <description>Product price plans for Special Price Request</description>
    <label>Special Price Request Product</label>
    <nameField>
        <displayFormat>SPRP-{000000}</displayFormat>
        <label>Special Price Request Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Price Request Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>