force-app/main/default/objects/Special_Price_Request_Product__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Special_Price_Request__r.Account__r.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>