force-app/main/default/objects/Special_Price_Request_Product__c/fields/Account_uB_Office__c.field-meta.xml
<CustomField>
    <fullName>Account_uB_Office__c</fullName>
    <formula>TEXT(Special_Price_Request__r.Account__r.uB_Office__c)</formula>
    <label>Account uB Office</label>
    <type>Text</type>
</CustomField>