force-app/main/default/objects/Special_Price_Request_Product__c/fields/CHFtoUSD__c.field-meta.xml
<CustomField>
    <fullName>CHFtoUSD__c</fullName>
    <label>CHFtoUSD</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>