force-app/main/default/objects/Special_Price_Request_Product__c/fields/COGS_data_source_RT__c.field-meta.xml
<CustomField>
    <fullName>COGS_data_source_RT__c</fullName>
    <description>This field explains where the COGS values are taken from.
They can be manually entered, taken from PM prediction or from sourcing prediction.
For automated COGS retrieval, please DELETE all Product Cost Values.</description>
    <inlineHelpText>This field explains where the COGS values are taken from.
They can be manually entered, taken from PM prediction or from sourcing prediction.
For automated COGS retrieval, please DELETE all Product Cost Values.</inlineHelpText>
    <label>COGS data source</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>