force-app/main/default/objects/Special_Price_Request_Product__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amp’ed RF Technology</fullName>
            </value>
            <value>
                <fullName>Bluegiga</fullName>
            </value>
            <value>
                <fullName>Broadcom</fullName>
            </value>
            <value>
                <fullName>CEC</fullName>
            </value>
            <value>
                <fullName>ConnectOne</fullName>
            </value>
            <value>
                <fullName>CSR (SiRF)</fullName>
            </value>
            <value>
                <fullName>Digi International</fullName>
            </value>
            <value>
                <fullName>Fibocom</fullName>
            </value>
            <value>
                <fullName>Furuno (eRide)</fullName>
            </value>
            <value>
                <fullName>Gainspan</fullName>
            </value>
            <value>
                <fullName>Gemalto (Cinterion)</fullName>
            </value>
            <value>
                <fullName>Globalsat</fullName>
            </value>
            <value>
                <fullName>Holux</fullName>
            </value>
            <value>
                <fullName>Huawei</fullName>
            </value>
            <value>
                <fullName>Intel</fullName>
            </value>
            <value>
                <fullName>iWOW</fullName>
            </value>
            <value>
                <fullName>JRC</fullName>
            </value>
            <value>
                <fullName>Laird</fullName>
            </value>
            <value>
                <fullName>Lantronix</fullName>
            </value>
            <value>
                <fullName>Linx</fullName>
            </value>
            <value>
                <fullName>Locosys</fullName>
            </value>
            <value>
                <fullName>LS Research</fullName>
            </value>
            <value>
                <fullName>Marvell</fullName>
            </value>
            <value>
                <fullName>Mediatek</fullName>
            </value>
            <value>
                <fullName>Microchip</fullName>
            </value>
            <value>
                <fullName>Murata</fullName>
            </value>
            <value>
                <fullName>Navis</fullName>
            </value>
            <value>
                <fullName>Nordic Semiconductor</fullName>
            </value>
            <value>
                <fullName>Novatel</fullName>
            </value>
            <value>
                <fullName>OriginGPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>