force-app/main/default/objects/Special_Price_Request_Product__c/fields/Competition_Price__c.field-meta.xml
<CustomField>
    <fullName>Competition_Price__c</fullName>
    <label>Competition Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>