force-app/main/default/objects/Special_Price_Request_Product__c/fields/Competition_Price_Currency__c.field-meta.xml
<CustomField>
    <fullName>Competition_Price_Currency__c</fullName>
    <label>Competition Price Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>