force-app/main/default/objects/Special_Price_Request_Product__c/fields/Competition_Product__c.field-meta.xml
<CustomField>
    <fullName>Competition_Product__c</fullName>
    <description>Product name of competition</description>
    <inlineHelpText>Product name of competition</inlineHelpText>
    <label>Competition Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>