force-app/main/default/objects/Special_Price_Request_Product__c/fields/Contribution_P10__c.field-meta.xml
<CustomField>
    <fullName>Contribution_P10__c</fullName>
    <formula>Contribution_Per_Unit_P10__c * Quantity_P10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution P10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>