force-app/main/default/objects/Special_Price_Request_Product__c/fields/Contribution_P1__c.field-meta.xml
<CustomField>
    <fullName>Contribution_P1__c</fullName>
    <formula>Contribution_Per_Unit_P1__c * Quantity_P1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>