force-app/main/default/objects/Special_Price_Request_Product__c/fields/Contribution_Pct__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Pct__c</fullName>
    <formula>if(or(isblank(Unit_Price_P1__c),isnull(Unit_Price_P1__c),Unit_Price_P1__c=0),0,Contribution_Total__c / Revenue_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contribution Total / Revenue Total</inlineHelpText>
    <label>Contribution Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>