force-app/main/default/objects/Special_Price_Request_Product__c/fields/Contribution_Pct_P1__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Pct_P1__c</fullName>
    <formula>if(or(isblank(Unit_Price_P1__c),isnull(Unit_Price_P1__c),Unit_Price_P1__c=0),0,Contribution_Per_Unit_P1__c / Unit_Price_P1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution Pct P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>