force-app/main/default/objects/Special_Price_Request_Product__c/fields/Contribution_Pct_P3__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Pct_P3__c</fullName>
    <formula>if(Unit_Price_P3__c=0,0,Contribution_Per_Unit_P3__c / Unit_Price_P3__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution Pct P3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>