force-app/main/default/objects/Special_Price_Request_Product__c/fields/Contribution_Per_Unit_P10__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Per_Unit_P10__c</fullName>
    <formula>IF(Quantity_P10__c=0,0, 
Unit_Price_P10__c * (1 - Distributor_Commission_P10__c )
- Product_Cost_P10__c
- Unit_Price_P10__c * IPR_Pct__c
- IPR_USD__c / 
IF(CONTAINS(TEXT(CurrencyIsoCode),&quot;CHF&quot;),CHFtoUSD__c,
IF(CONTAINS(TEXT(CurrencyIsoCode),&quot;EUR&quot;),EURtoUSD__c,
IF(CONTAINS(TEXT(CurrencyIsoCode),&quot;JPY&quot;),JPYtoUSD__c,
1))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit Price * (1 - Distributor Commission) - Product Cost - IPR Costs (USD and Pct)</inlineHelpText>
    <label>Contribution Per Unit P10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>