force-app/main/default/objects/Special_Price_Request_Product__c/fields/Contribution_Total__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Total__c</fullName>
    <formula>Contribution_P1__c + Contribution_P2__c + Contribution_P3__c + Contribution_P4__c + Contribution_P5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>