force-app/main/default/objects/Special_Price_Request_Product__c/fields/Distributor_Commission_P1__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Commission_P1__c</fullName>
    <inlineHelpText>Commission u-blox should pay to the distributor in direct business. In case there is this commission, there should be no Resale Price or Additional Fee to the distributor.</inlineHelpText>
    <label>Distributor Commission P1</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>