force-app/main/default/objects/Special_Price_Request_Product__c/fields/Distributor_Margin_P1__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Margin_P1__c</fullName>
    <formula>if(Distributor_Resale_Unit_Price_P1__c&gt;0,1-(Unit_Price_P1__c/(Distributor_Resale_Unit_Price_P1__c-Distributor_Additional_Fee_P1__c)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Margin P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>