force-app/main/default/objects/Special_Price_Request_Product__c/fields/Distributor_Margin_P2__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Margin_P2__c</fullName>
    <formula>if(Distributor_Resale_Unit_Price_P2__c&gt;0,1-(Unit_Price_P2__c/(Distributor_Resale_Unit_Price_P2__c-Distributor_Additional_Fee_P2__c)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Margin P2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>