force-app/main/default/objects/Special_Price_Request_Product__c/fields/Distributor_Resale_Unit_Price_P1__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Resale_Unit_Price_P1__c</fullName>
    <label>Distributor Resale Unit Price P1</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>