force-app/main/default/objects/Special_Price_Request_Product__c/fields/EURtoUSD__c.field-meta.xml
<CustomField>
    <fullName>EURtoUSD__c</fullName>
    <label>EURtoUSD</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>