force-app/main/default/objects/Special_Price_Request_Product__c/fields/IPR_Coverage__c.field-meta.xml
<CustomField>
    <fullName>IPR_Coverage__c</fullName>
    <inlineHelpText>Mandatory if Product is CEL</inlineHelpText>
    <label>IPR Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premium coverage</fullName>
            </value>
            <value>
                <fullName>Prime coverage</fullName>
            </value>
            <value>
                <fullName>Premium except Qualcomm</fullName>
            </value>
            <value>
                <fullName>Prime except Qualcomm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>