force-app/main/default/objects/Special_Price_Request_Product__c/fields/IPR_Pct__c.field-meta.xml
<CustomField>
    <fullName>IPR_Pct__c</fullName>
    <inlineHelpText>IPR adder in percent. Copied from the Product.</inlineHelpText>
    <label>IPR Pct</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>