force-app/main/default/objects/Special_Price_Request_Product__c/fields/IPR_USD__c.field-meta.xml
<CustomField>
    <fullName>IPR_USD__c</fullName>
    <inlineHelpText>IPR adder in USD. Copied from the selected Product</inlineHelpText>
    <label>IPR USD</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>