force-app/main/default/objects/Special_Price_Request_Product__c/fields/JPYtoUSD__c.field-meta.xml
<CustomField>
    <fullName>JPYtoUSD__c</fullName>
    <label>JPYtoUSD</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>