force-app/main/default/objects/Special_Price_Request_Product__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <formula>Special_Price_Request__r.Opportunity__r.Name</formula>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>