force-app/main/default/objects/Special_Price_Request_Product__c/fields/Product_Center__c.field-meta.xml
<CustomField>
    <fullName>Product_Center__c</fullName>
    <description>Added for use in report filter</description>
    <formula>TEXT(Product__r.Product_Center__c)</formula>
    <inlineHelpText>Added for use in report filter</inlineHelpText>
    <label>Product Center</label>
    <type>Text</type>
</CustomField>