force-app/main/default/objects/Special_Price_Request_Product__c/fields/Product_Center_picklist__c.field-meta.xml
<CustomField>
    <fullName>Product_Center_picklist__c</fullName>
    <description>Added as Picklist to be updated with Workflow as the formula can&apos;t be used for Roll-up Summary</description>
    <label>Product Center (picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Center</valueSetName>
    </valueSet>
</CustomField>