force-app/main/default/objects/Special_Price_Request_Product__c/fields/Product_Cost_P1__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost_P1__c</fullName>
    <inlineHelpText>If this field is empty when you Save, the value will be copied from COGS 4 of the Product after Save. Editable.</inlineHelpText>
    <label>Product Cost P1</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>