force-app/main/default/objects/Special_Price_Request_Product__c/fields/Product_Series__c.field-meta.xml
<CustomField>
    <fullName>Product_Series__c</fullName>
    <formula>TEXT(Product__r.Product_Series__c)</formula>
    <label>Product Series</label>
    <type>Text</type>
</CustomField>