force-app/main/default/objects/Special_Price_Request_Product__c/fields/Qty_Of_Competition_Price__c.field-meta.xml
<CustomField>
    <fullName>Qty_Of_Competition_Price__c</fullName>
    <description>Quantity which the Competition Price is applicable to</description>
    <inlineHelpText>Quantity which the Competition Price is applicable to</inlineHelpText>
    <label>Qty Of Competition Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>