force-app/main/default/objects/Special_Price_Request_Product__c/fields/Quantity_P1__c.field-meta.xml
<CustomField>
    <fullName>Quantity_P1__c</fullName>
    <label>Quantity P1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>