force-app/main/default/objects/Special_Price_Request_Product__c/fields/Quantity_Total__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Total__c</fullName>
    <formula>Quantity_P1__c + Quantity_P2__c + Quantity_P3__c + Quantity_P4__c + Quantity_P5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>