force-app/main/default/objects/Special_Price_Request_Product__c/fields/Revenue_P10__c.field-meta.xml
<CustomField>
    <fullName>Revenue_P10__c</fullName>
    <formula>Unit_Price_P10__c * Quantity_P10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue P10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>