force-app/main/default/objects/Special_Price_Request_Product__c/fields/Revenue_P1__c.field-meta.xml
<CustomField>
    <fullName>Revenue_P1__c</fullName>
    <formula>Unit_Price_P1__c * Quantity_P1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue P1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>