force-app/main/default/objects/Special_Price_Request_Product__c/fields/Revenue_Total__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Total__c</fullName>
    <formula>Revenue_P1__c + Revenue_P2__c + Revenue_P3__c + Revenue_P4__c + Revenue_P5__c + Revenue_P6__c + Revenue_P7__c + Revenue_P8__c + Revenue_P9__c + Revenue_P10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>