force-app/main/default/objects/Special_Price_Request_Product__c/fields/Special_Price_Request__c.field-meta.xml
<CustomField>
    <fullName>Special_Price_Request__c</fullName>
    <label>Special Price Request</label>
    <referenceTo>Special_Price_Request__c</referenceTo>
    <relationshipLabel>Special Price Request Products</relationshipLabel>
    <relationshipName>Special_Price_Request_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>