force-app/main/default/objects/Special_Price_Request_Product__c/fields/Unit_Price_P10__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_P10__c</fullName>
    <label>Unit Price P10</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>