force-app/main/default/objects/Special_Price_Request_Product__c/fields/Year_P10__c.field-meta.xml
<CustomField>
    <fullName>Year_P10__c</fullName>
    <inlineHelpText>Starting date of the validity of Price 10 (Jan. 1 YYYY)</inlineHelpText>
    <label>Year P10</label>
    <type>Date</type>
</CustomField>