force-app/main/default/objects/Special_Price_Request_Product__c/fields/Year_P1__c.field-meta.xml
<CustomField>
    <fullName>Year_P1__c</fullName>
    <inlineHelpText>Starting date of the validity of Price 1 (Jan. 1 YYYY)</inlineHelpText>
    <label>Year P1</label>
    <type>Date</type>
</CustomField>