force-app/main/default/objects/Special_Price_Request_Product__c/fields/Year_P2__c.field-meta.xml
<CustomField>
    <fullName>Year_P2__c</fullName>
    <inlineHelpText>Starting date of the validity of Price 2 (Jan. 1 YYYY)</inlineHelpText>
    <label>Year P2</label>
    <type>Date</type>
</CustomField>