force-app/main/default/objects/Special_Price_Request_Product__c/validationRules/Check_UBX_M8130_KT_B302GA.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_UBX_M8130_KT_B302GA</fullName>
    <active>true</active>
    <description>UBX-M8130-KT-B302GA is only for Qianxun (001D000001f2c0c)</description>
    <errorConditionFormula>AND(
  Special_Price_Request__r.Account__r.Id&lt;&gt;&apos;001D000001f2c0c&apos;,
  Product__r.Id=&apos;01t57000009MXv0&apos;
)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>This is a customer-specific product. Please choose other products.</errorMessage>
</ValidationRule>