force-app/main/default/objects/Special_Price_Request_Product__c/validationRules/Currency_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Currency_check</fullName>
    <active>true</active>
    <description>Do not allow to save if Currency is different from Special Price request</description>
    <errorConditionFormula>TEXT(CurrencyIsoCode) &lt;&gt; TEXT(Special_Price_Request__r.CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Use the same currency as Special Price Request</errorMessage>
</ValidationRule>